k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worktracker
  labels:
    app: worktracker
spec:
  type: ClusterIP
  selector:
    app: worktracker
  ports:
    - name: http
      port: 80
      targetPort: 8000
